Selenium IDs have been added

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
@@ -44,7 +44,7 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:commandLink title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
+				<h:commandLink id="lnkSelectForEasySubmission1" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
 					<h:outputText value="#{context.name}"/>
 				</h:commandLink>
 			</b>
@@ -57,7 +57,7 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:commandLink title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
+				<h:commandLink id="lnkSelectForEasySubmission" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
 					<h:outputText value="#{context.name}"/>
 				</h:commandLink>
 			</b>
