--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
@@ -43,17 +43,17 @@
 	<h2>Submission</h2>      	
           <b>Enter a new Publication to PubMan?</b><br/>
 	   ... by using the 
-		<h:commandLink title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+		<h:commandLink id="lnkEasySubmission" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... by 
-		<h:commandLink title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+		<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
 			<h:outputText value="Import" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... by using the 
-		<h:commandLink title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
@@ -67,7 +67,7 @@
 	<br/>
 		<h2>My Items</h2>
 		...finish your data 
-		<h:outputLink value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
+		<h:outputLink id="lnkSubmissionsOrCheck" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
 			<h:outputText value="submissions or check "/>
 		</h:outputLink>
 		if your items have been already realeased to the public.
@@ -82,7 +82,7 @@
 	<br/>
 		<h2>QA Workspace</h2>
 		... 		
-		<h:outputLink value="#{ApplicationBean.appContext}QAWSPage.jsp">
+		<h:outputLink id="lnkModerateOrEdit" value="#{ApplicationBean.appContext}QAWSPage.jsp">
 			<h:outputText value="moderate or edit"/>
 		</h:outputLink>
 		items entered for your context.
@@ -117,17 +117,17 @@
 	<h2>Dateneingabe</h2>      	
           <b>Wollen Sie eine neue Publikation eingeben?</b><br/>
 	   ... benutzen Sie die 
-		<h:commandLink title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+		<h:commandLink id="lnkEasySubmission" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... den 
-		<h:commandLink title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+		<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
 			<h:outputText value="Import" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... oder die 
-		<h:commandLink title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
@@ -140,7 +140,7 @@
 	<br/>
 		<h2>Meine Datens&auml;tze</h2>
 		...beenden Sie Ihre 
-		<h:outputLink value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
+		<h:outputLink id="lnkDateneingabeOderPruefen" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
 			<h:outputText value="Dateneingabe oder prüfen "/>
 		</h:outputLink>
 		Sie ob Ihre Items bereits ver&ouml;ffentlicht wurden.
@@ -155,7 +155,7 @@
 	<br/>
 		<h2>QA Bereich</h2>
 		... 		
-		<h:outputLink value="#{ApplicationBean.appContext}QAWSPage.jsp">
+		<h:outputLink id="lnkUeberpruefenOderEditieren" value="#{ApplicationBean.appContext}QAWSPage.jsp">
 			<h:outputText value="überprüfen oder editieren"/>
 		</h:outputLink>
 		Sie Items aus Ihrem Kontext.
@@ -190,17 +190,17 @@
 	<h2>新規登録</h2>      	
           <b>文献資料をPubManへ登録する</b><br/>
 	   ... 
-		<h:commandLink title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+		<h:commandLink id="lnkEasySubmission" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... 
-		<h:commandLink title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+		<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
 			<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... 
-		<h:commandLink title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
@@ -214,7 +214,7 @@
 	<br/>
 		<h2>登録資料一覧</h2>
 		...登録一覧から自身の登録分を
-		<h:outputLink value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
+		<h:outputLink id="lnkJapan1" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
 			<h:outputText value="確認もしくは登録完了する"/>
 		</h:outputLink>。
 		登録済みで未公開状態の資料を公開する。
@@ -229,7 +229,7 @@
 	<br/>
 		<h2>管理画面</h2>
 		... 登録資料の
-		<h:outputLink value="#{ApplicationBean.appContext}QAWSPage.jsp">
+		<h:outputLink id="lnkJapan2" value="#{ApplicationBean.appContext}QAWSPage.jsp">
 			<h:outputText value="内容確認もしくは修正"/>
 		</h:outputLink>
 		する。
