--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
@@ -43,17 +43,17 @@
 	<h2>Submission</h2>      	
           <b>Enter a new Publication to PubMan?</b><br/>
 	   ... by using the 
-		<h:commandLink id="lnkEasySubmission" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+		<h:commandLink id="lnkEasySubmission_en" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... by 
-		<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+		<h:commandLink id="lnkImport_en" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
 			<h:outputText value="Import" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... by using the 
-		<h:commandLink id="lnkNewSubmission" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission_en" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
@@ -117,17 +117,17 @@
 	<h2>Dateneingabe</h2>      	
           <b>Wollen Sie eine neue Publikation eingeben?</b><br/>
 	   ... benutzen Sie die 
-		<h:commandLink id="lnkEasySubmission" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+		<h:commandLink id="lnkEasySubmission_de" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... den 
-		<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+		<h:commandLink id="lnkImport_de" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
 			<h:outputText value="Import" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... oder die 
-		<h:commandLink id="lnkNewSubmission" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission_de" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
@@ -190,17 +190,17 @@
 	<h2>新規登録</h2>      	
           <b>文献資料をPubManへ登録する</b><br/>
 	   ... 
-		<h:commandLink id="lnkEasySubmission" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+		<h:commandLink id="lnkEasySubmission_jp" title="#{tip.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.submission_lnkEasySubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... 
-		<h:commandLink id="lnkImport" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+		<h:commandLink id="lnkImport_jp" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
 			<h:outputText value="#{lbl.submission_lnkImport}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
 		</h:commandLink>
 		<br/>
 	  ... 
-		<h:commandLink id="lnkNewSubmission" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
+		<h:commandLink id="lnkNewSubmission_jp" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
     </span>
